Added Clothes category

--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@
                             <option value="movies">🎬 أفلام</option>
                             <option value="celebrities">👑 مشاهير</option>
                             <option value="jobs">💼 وظائف</option>
+                            <option value="clothes">👕 ملابس</option>
                             <option value="cartoons">🧸 كرتون</option>
                             <option value="games">🎮 ألعاب</option>
                             <option value="things">📦 أشياء</option>
