Implement Verbal Questioning mode (X asks Y) for both local and online play

--- a/index.html
+++ b/index.html
@@ -489,7 +489,8 @@
                 <div class="hint-input-wrapper">
                     <input type="text" id="online-hint-input" class="hint-input" placeholder="اكتب تلميحك هنا..."
                         maxlength="50">
-                    <button class="submit-hint-btn" onclick="OnlineGame.submitHint()">إرسال ✓</button>
+                    <button id="online-submit-hint-btn" class="submit-hint-btn" onclick="OnlineGame.submitHint()">إرسال
+                        ✓</button>
                 </div>
                 <div id="online-hints-list" class="hints-list">
                     <!-- Live hints from other players -->
